# zygl2

./: .gitattributes  .gitignore  CMakeLists.txt  DOMAIN_IMPLEMENTATION.md  GIT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_IMPLEMENTATION.md  INTERFACES_IMPLEMENTATION.md  Makefile  README.md  Server_API.txt  config.dev.json  config.json  test_dependencies.cpp  test_domain.cpp  编译指南.md  编译速查.md  项目目录结构.md
docs/: GitHub推送指南.md  UDP协议.md  应用层实现总结.md  要点.txt  配置文件说明.md  配置管理实现总结.md  领域层实现完成.md
src/: main.cpp
src/application/: README.md  application.h
src/application/dtos/: dtos.h
src/application/services/: alert_service.h  monitoring_service.h  stack_control_service.h
src/domain/: README.md  alert.h  board.h  chassis.h  domain.h  i_alert_repository.h  i_chassis_repository.h  i_stack_repository.h  service.h  stack.h  task.h  value_objects.h
src/infrastructure/: README.md  infrastructure.h
src/infrastructure/api_client/: qyw_api_client.h
src/infrastructure/collectors/: data_collector_service.h
src/infrastructure/config/: chassis_factory.h  config_loader.h
src/infrastructure/persistence/: in_memory_alert_repository.h  in_memory_chassis_repository.h  in_memory_stack_repository.h
src/interfaces/: README.md  interfaces.h
src/interfaces/http/: webhook_listener.h
src/interfaces/udp/: command_listener.h  state_broadcaster.h  udp_protocol.h
